--- a/Gentoo/etc/portage/make.conf
+++ b/Gentoo/etc/portage/make.conf
@@ -22,5 +22,5 @@ GRUB_PLATFORMS="emu efi-32 efi-64 pc"
 GENTOO_MIRRORS="http://mirror.bytemark.co.uk/gentoo/"
 INPUT_DEVICES="evdev ps2 libinput keyboard mouse synaptics"
 VIDEO_CARDS="intel"
-USE="alsa bash-completion -cdr -gnome -dvd -dvdr dbus elogind git inotify ipv6 lm_sensors lzma lzo sockets syslog threads unicode xattr wifi X udev"
+USE="alsa bash-completion -cdr -gnome -dvd -dvdr dbus elogind git inotify ipv6 -kdepim lm_sensors lzma lzo -nepomuk -semantic-desktop sockets syslog threads unicode xattr wifi X udev"
 ACCEPT_LICENSE="* -@EULA"
