--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -20,7 +20,7 @@ LC_MESSAGES=C
 
 GRUB_PLATFORMS="emu efi-32 efi-64 pc"
 GENTOO_MIRRORS="http://mirror.bytemark.co.uk/gentoo/"
-INPUT_DEVICES="evdev ps2 libinput keyboard mouse synaptics"
+INPUT_DEVICES="libinput keyboard synaptics"
 VIDEO_CARDS="intel"
 USE="alsa bash-completion -cdr -gnome -dvd -dvdr dbus elogind git inotify ipv6 -kdepim lm_sensors lzma lzo -nepomuk -semantic-desktop sockets syslog threads unicode xattr wifi X udev"
 ACCEPT_LICENSE="* -@EULA"
