Added alias to retrieve all git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,5 @@
 [alias]
+        alias = !git-alias
         backup = !git ls-files --others --exclude-standard -z | xargs -0 zip -r ~/Code/backup-untracked/$(git rev-parse --show-toplevel | xargs basename).zip
         cm = commit -am
         cnt = rev-list --all --count
