--- a/.i3/config
+++ b/.i3/config
@@ -149,7 +149,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        font pango:Hack 10
+        status_command $barcmd --config ${HOME}/.config/i3/status.conf
 }
 
 # Alsa key bindings
