Support for two-finger right-click using libinput; Prevent less from clearing screen on exit

--- a/etc/X11/xorg.conf.d/40-libinput.conf
+++ b/etc/X11/xorg.conf.d/40-libinput.conf
@@ -19,5 +19,7 @@ Section "InputClass"
 	Option "NaturalScrolling" "True"
 	Option "HorizontalScrolling" "True"
 	Option "AccelSpeed" "0.5"
+	Option "ClickMethod" "clickfinger"
         Driver "libinput"
 EndSection
+
