Moves things around; Changes Gentoo specific stuff; adds Ranger config

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -7,7 +7,7 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j9"
+MAKEOPTS="-j4"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -21,6 +21,7 @@ LC_MESSAGES=C
 GRUB_PLATFORMS="emu efi-32 efi-64 pc"
 GENTOO_MIRRORS="http://mirror.bytemark.co.uk/gentoo/"
 INPUT_DEVICES="libinput keyboard synaptics"
-VIDEO_CARDS="intel"
-USE="alsa bash-completion -cdr -gnome -dvd -dvdr dbus elogind git inotify ipv6 -kdepim lm_sensors lzma lzo -nepomuk -semantic-desktop sockets syslog threads unicode xattr wifi X udev"
+VIDEO_CARDS="intel i915"
+USE="alsa bash-completion -cdr -gnome -kde -dvdr dbus dvd elogind git inotify ipv6 -kdepim lm-sensors lzma lzo -nepomuk -semantic-desktop sockets syslog threads unicode xattr wifi X udev"
 ACCEPT_LICENSE="* -@EULA"
+RUBY_TARGETS="ruby25 ruby26 ruby27"
