--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,6 +6,7 @@
 
 set $mod Mod4
 set $term urxvt
+set $term_cwd ~/bin/urxvt_cwd
 set $menu rofi -show drun -theme "solarized_alternate"
 set $barcmd i3status
 set $lockcmd i3lock
@@ -19,12 +20,12 @@ exec --no-startup-id xset r rate 262 57
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term
 
 # start a terminal from the current working
 # directory of the windows that is currently
 # focused
-bindsym $mod+b exec ~/bin/urxvt_cwd
+bindsym $mod+Return exec $term_cwd
 
 # kill focused window
 bindsym $mod+Shift+q kill
