--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
         lg =  log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
         ll = log --oneline
         p = push -u origin HEAD
+        pl = pull
         rv = remote -v
         s = status -sb
         se = !git rev-list --all | xargs git grep -n --full-name -F
@@ -42,6 +43,9 @@
 
 [log]
         date = relative
+
+[pull]
+        rebase = false
 
 [push]
         followTags = true
