Alacritty, Helix and Tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,39 @@
+# change prefix to Ctrl-a (like in gnu-screen)
+
+unbind C-b
+set-option -g prefix `
+bind-key ` send-prefix
+
+# Default shell
+set-option -g default-command /opt/homebrew/bin/bash
+set-option -g default-shell /opt/homebrew/bin/bash
+
 # Upgrade $TERM
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# re-number windows when one is closed
+set -g renumber-windows on
+
+# word separators for automatic word selection
+setw -g word-separators ' @"=()[]_-:,.'
+setw -ag word-separators "'"
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
 
 # Automatically sets window title
 set-option -g set-titles on
 set-option -g allow-rename off
+
+# history
+set -g history-limit 10000
 
 # Enable activity monitoring
 set -g monitor-activity on
@@ -11,6 +41,52 @@ set -g visual-activity on
 
 # Status bar
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+
+# Mouse mode on
+set -g mouse on
+
+#--------------------------------------------------------
+# Key bindings
+
+# source config file
+bind r source-file ~/.tmux.conf
+
+# easy-to-remember split pane commands
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+# moving between panes with vim movement keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Disable confirm before killing
+bind-key x kill-pane
+
+# Pressing Ctrl+Shift+Left (will move the current window to the left. Similarly
+# right. No need to use the modifier (C-b).
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
+bind -n S-down new-window -c "#{pane_current_path}"
+bind -n S-left prev
+bind -n S-right next
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Enter copy mode with /
+bind-key / copy-mode \; send-key ?
+
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
+#--------------------------------------------------------
+# Themes and plugins
 
 # Theme
 set -g @themepack 'powerline/double/cyan'
